# opengeocoding

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  docker-compose.yml  go.work  go.work.sum  service.proto  tests.md
.github/workflow/: build-docker-api.yaml  docker-api.yaml
.github/workflows/: build-docker-api.yml  deploy-website.yml  prepare-release-notes-develop.yml
api/: Dockerfile  go.mod  go.sum  main.go
api/countries/: countries.go  countries.json  countries_test.go
api/forward/: forward.go  forward_test.go
api/forward/testdata/: 461 W Main St, Cheshire, 06410.golden  7926 Old Seward Hwy; Suite A6; Anchorage, Alaska 99518, US.golden  Geislersgade 14, 3 mf 2300 Copenhagen S.golden  Geislersgade 14, 3 th 2300 Copenhagen S.golden  Geislersgade 14, 3th 2300 Copenhagen.golden  Geislersgade 14, 4 2300 Copenhagen S.golden  Geislersgade 14, 4 2300 Copenhagen.golden
api/geolabels/: citiesLabelGroups.go  countries.go  countryLabelToCode.go
api/parser/: parser.go
api/parser/testdata/: Geislersgade 14, 3 mf 2300 Copenhagen S.golden  Geislersgade 14, 4 2300 Copenhagen.golden
api/pkg/apis/: grpc.go  http.go  rabbitmq.go
docs/: docusaurus.config.js
docs/blog/: 2023-09-15-welcome.md  authors.yml
generators/: go.mod  main.go
generators/download/: download-unzip.go  download.go  read-csv.go
generators/scripts/: cities-labels.go  countries-labels.go  countries-languages.go
generators/write/: write.go
importers/: Cargo.toml  Dockerfile  build.rs
importers/src/: client.rs  lib.rs
importers/src/config/: mod.rs
importers/src/data/: address.rs  city.rs  helper.rs  mod.rs  street.rs  street_v2.rs
importers/src/download/: mod.rs
importers/src/extractor/: mod.rs  tar_bz2.rs
importers/src/geonames/: mod.rs
importers/src/openaddresses/: mod.rs
importers/src/openstreetdata/: extract_houses.rs  extract_houses_country.rs  extract_streets.rs  extract_streets_country.rs  files_list.rs  mod.rs
importers/src/openstreetmap/: extract.rs  extract_file.rs  file_list.rs  files.json  mod.rs
importers/src/wof/: country_detector.rs  mod.rs  region_detector.rs  shapefile.rs  zone_detector.rs
src/: lib.rs  main.rs
src/data/: mod.rs
src/openaddresses/: mod.rs
(+122 files in other folders)
