[package]
name = "geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.27"
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11.0"