[package]
name = "opengeocoding"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openaddress_import"
path = "src/bin/openaddress_import.rs"

[[bin]]
name = "http"
path = "src/bin/http.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11.0"
zip = "0.6"
mysql = { version = "24.0.0", features = ["default"]}
axum = "0.6.20"
reqwest = "0.11.20"