[package]
name = "opengeocoding"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openaddress_import"
path = "src/bin/openaddress_import.rs"

[[bin]]
name = "openstreetmap_import"
path = "src/bin/openstreetmap_import.rs"

[[bin]]
name = "geonames_import"
path = "src/bin/geonames_import.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.11.0"
zip = "0.6"
csv = "1.2.2"
tar = "0.4"
bzip2-rs = "0.1.2"
geo-types = "0.7.11"
geo = "0.26.0"
rayon = "1.7.0"
geozero = "0.11.0"
collecting-hashmap = "0.2.0"
tonic = "0.7"
prost = "0.10"
osmpbfreader = "0.16.0"

[build-dependencies]
tonic-build = "0.7"
